Fix reflective acess