@@ -16,6 +16,11 @@ dependencies {
     implementation("${pulsarGroup}:pulsar-client:${pulsarVersion}")
 }
 
+test {
+    // see https://junit-pioneer.org/docs/environment-variables/#warnings-for-reflective-access
+    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED"
+}
+
 // generate agent parameters documentation
 application {
     mainClass = "com.datastax.oss.cdc.agent.AgentConfig"
